<resources>
    <string name="app_name">邦到</string>
    <string name="file_not_found_toast">文件丢失</string>
    <string name="voice_length">10"</string>
    <string name="user_already_exist_toast">该用户已存在</string>
    <string name="user_add_self_toast">不能添加自己为好友</string>
    <string name="adding_hint">正在添加</string>
    <string name="creating_hint">创建中</string>
    <string name="action_settings">Settings</string>
    <string name="upstar_skip_en">Skip</string>
    <string name="copy">复制</string>
    <string name="delete">删除</string>
    <string name="forward_msg">转发</string>
    <string name="send_message">发 送</string>
    <string name="message_prompt">请输入您的留言消息</string>
    <string name="upstar_skip_ch">跳过</string>
    <string name="news_fragment_buttom_name">资讯</string>
    <string name="online_consult_fragment_buttom_name">消息</string>
    <string name="buy_cards_fragment_buttom_name">安邦卡</string>
    <string name="set_center_fragment_buttom_name">我</string>
    <string name="online_medical_chat">医疗康复在线</string>
    <string name="online_law_chat">法律服务问答</string>
    <string name="online_medical_rehabilitation_chat">伤残鉴定咨询</string>
    <string name="online_damage_compensation_chat">损伤赔偿问答</string>
    <string name="online_calculator">自查计算器</string>
    <string name="login">登录</string>
    <string name="login_have_problems">遇到问题？</string>
    <string name="login_new_user_register">新用户</string>
    <string name="no_login_hint">尚未登录，点击立即登录！</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="mess">消\t\t\t息</string>
    <string name="news">资\t\t\t讯</string>
    <string name="cards">安\t邦\t卡</string>
    <string name="mine">我</string>
    <string name="feedback">留\t\t\t言</string>
    <string name="invite">邀\t请\t好\t友</string>
    <string name="mycoupon">我\t的\t卡\t券</string>
    <string name="set">设\t\t\t置</string>
    <string name="menu_home">Home</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_update">Update</string>
    <string name="menu_eixt">Exit</string>
    <string name="createDatabaseButton">createDatabase</string>
    <string name="updateDatabaseButton">updateDatabase</string>
    <string name="insertButton">insert</string>
    <string name="updateButton">update</string>
    <string name="selectButton">select</string>
    <string name="deleteButton">delete</string>
    <string name="moblie_not_null_toast">您输入的手机号不正确</string>
    <string name="username_not_null_toast">用户名不能为空</string>
    <string name="password_not_null_toast">密码不能为空</string>
    <string name="passwordsure_not_null_toast">两次密码不一样</string>
    <string name="username_hit">用户名</string>
    <string name="password_hit">用户密码</string>
    <string name="register">注册</string>
    <string name="password_length_illegal">密码长度要在4-128个字节之间</string>
    <string name="error_null">姓名、性别、验证码或者年龄不能为空</string>
    <string name="inviteCode_null">请输入正确的邀请码</string>
    <string name="register_username_hit">用户名(手机号码)</string>
    <string name="loading">正在加载</string>
    <string name="login_hint">登录中</string>
    <string name="registering_hint">注册中</string>
    <string name="sdcard_not_exist_toast">暂无外部存储</string>
    <string name="user_logout_dialog_title">下线提示</string>
    <string name="user_logout_dialog_message">您的账号已经在另一台设备上登录，您被迫下线</string>
    <string name="user_delete_hint_message">您的账号已被删除，您被迫下线</string>
    <string name="record_voice_permission_denied">请在应用的权限管理中将使用录音选项设置为允许，
        否则将无法使用录音功能</string>
    <string name="local_picture_not_found_toast">暂无外部存储，某些本地图片不可预览</string>
    <string name="server_800002">AppKey信息为空</string>
    <string name="server_800003">AppKey未注册</string>
    <string name="server_800004">用户ID为空</string>
    <string name="server_800005">用户ID未注册(AppKey无该UID)</string>
    <string name="server_800006">用户ID不存在(数据库中无该UID)</string>
    <string name="server_800012">请重新登录</string>
    <string name="server_800013">您的账号已登出，请重新登录</string>
    <string name="server_801003">用户名不存在</string>
    <string name="server_802001">用户名为空</string>
    <string name="server_801004">密码错误</string>
    <string name="server_803001">发送消息失败，状态存储异常</string>
    <string name="server_803002">发送消息失败，系统网络异常</string>
    <string name="server_803003">发送失败，目标用户未注册或不存在</string>
    <string name="server_803004">发送失败，此群已被删除</string>
    <string name="server_803005">您已被请出此群，不能发送消息</string>
    <string name="server_803008">消息已发出，但被对方拒收了。</string>
    <string name="server_808003">讨论组数量已达上限，创建失败</string>
    <string name="server_808004">群组名长度超出上限</string>
    <string name="server_810003">用户不属于该群组</string>
    <string name="server_810005">要添加的用户尚未注册</string>
    <string name="server_810007">用户已存在</string>
    <string name="server_810008">讨论组的成员数量已达上限，添加失败</string>
    <string name="server_810009">该用户拥有的讨论组数量已达上限，添加失败</string>
    <string name="server_811003">用户不在该讨论组中，删除成员失败</string>
    <string name="server_812002">您已被请出此群，不能修改相关信息</string>
    <string name="server_818001">要添加的黑名单列表为空，添加失败</string>
    <string name="server_818002">要添加的黑名单列表中有成员不存在，添加失败</string>
    <string name="server_818003">要添加的黑名单列表中有成员不能被添加，添加失败</string>
    <string name="server_818004">要添加的黑名单列表中有成员重复添加，添加失败</string>
    <string name="sdk_http_899001">用户已存在</string>
    <string name="sdk_http_899006">该群已被删除</string>
    <string name="sdk_http_898005">uid不存在</string>
    <string name="sdk_http_898006">此群已被删除</string>
    <string name="sdk_http_898008">校验失败</string>
    <string name="sdk_http_898009">APPKey不存在</string>
    <string name="sdk_http_898010">请求失败，请稍候重试</string>
    <string name="sdk_http_898030">系统繁忙，稍后重试</string>
    <string name="sdk_87x_871104">服务器返回错误</string>
    <string name="sdk_87x_871303">用户名需以数字或字母开头，长度在4-128个字节之间，且不能带_ @ -以外的字符</string>
    <string name="sdk_87x_871304">密码长度要在4-128个字节之间</string>
    <string name="sdk_87x_871305">名称长度须小于64个字节</string>
    <string name="sdk_87x_871309">消息所含文件不存在</string>
    <string name="sdk_87x_871310">网络已断开，请检查网络连接</string>
    <string name="sdk_87x_871311">用户未设定头像，下载头像失败</string>
    <string name="sdk_87x_871312">ImageContent创建失败</string>
    <string name="sdk_87x_871403">第三方上传失败，请稍后重试</string>
    <string name="sdk_87x_871404">下载失败，请稍后重试</string>
    <string name="sdk_87x_871501">appkey与appid不匹配或者token无效</string>
    <string name="sdk_87x_871502">appkey无效</string>
    <string name="sdk_87x_871503">appkey与platform不匹配</string>
    <string name="sdk_87x_871504">push注册还未完成，请稍后重试</string>
    <string name="sdk_87x_871505">包名不存在</string>
    <string name="sdk_87x_871506">imei无效</string>
    <string name="sdk_87x_871201">请求超时，请检查您的网络</string>
    <string name="send">发送</string>
    <string name="picture">图片</string>
    <string name="take_photo">拍照</string>
    <string name="create_group">创建群聊</string>
    <string name="chat_detail_title">聊天详情</string>
    <string name="unnamed">未命名</string>
    <string name="group_name_hit">群聊名称</string>
    <string name="group_people_num_hit">群人数上限</string>
    <string name="group_my_name_hit">我在本群昵称</string>
    <string name="group_chat_history_hit">查看聊天记录</string>
    <string name="group_clear_history_hit">清空聊天记录</string>
    <string name="group_exit_btn">删除并退出</string>
    <string name="resend_commit">重发</string>
    <string name="clear_history_confirm_title">确定清空聊天记录？</string>
    <string name="delete_group_confirm_title">确定删除并退出群聊？</string>
    <string name="exiting_group_toast">正在退出</string>
    <string name="add_friend_to_group_title">添加好友到群组</string>
    <string name="searching_user">正在查找</string>
    <string name="unknown_error_toast">未知错误</string>
    <string name="change_pwd_tip">修改密码前请输入原密码</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="group_name_not_null_toast">名称不能为空</string>
    <string name="modifying_hint">正在修改</string>
    <string name="modify_success_toast">修改成功</string>
    <string name="change_nickname_hint">修改此昵称只会在本群中显示</string>
    <string name="resend_message_hint">重发该消息？</string>
    <string name="group">群聊</string>
    <string name="camera_not_prepared">摄像头尚未准备好</string>
    <string name="combine_title">(%s)</string>
    <string name="yesterday">昨天</string>
    <string name="before_dawn">凌晨</string>
    <string name="morning">早上</string>
    <string name="afternoon">下午</string>
    <string name="night">晚上</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="second">秒</string>
    <string name="type_picture">[图片]</string>
    <string name="type_voice">[语音]</string>
    <string name="type_location">[位置]</string>
    <string name="video">视频</string>
    <string name="group_notification">[群成员变动]</string>
    <string name="type_custom">[自定义消息]</string>
    <string name="delete_conv">删除该聊天</string>
    <string name="actionbar_conversation">会话</string>
    <string name="copy_toast">已复制</string>
    <string name="symbol_second">\"</string>
    <string name="voice_fetch_failed_toast">获取语音失败，请重试</string>
    <string name="h_content">365天，私人医生、私人律师、私人理赔师、私人助理暖心相随！</string>
    <string name="h_1_1">医疗救援服务内容（1次）</string>
    <string name="h_1_2">1、意外事故救援电话服务：提供基本的现场医疗救援常识和心理支持。\n2、院前医疗救治指导：专业授权医生通过电话在第一时间指导现场医疗急救\n3、评估、推荐合适医院：根据会员需要，协助评估推荐医院，顺利就医；特殊困难情况，与相关网络医院建立联系，协助沟通；\n4、治疗过程跟踪和管控：防止误诊，授权医生与会员的主治医师直接沟通，向会员或其家属提供一次治疗过程的口头评估。\n（注：上述服务内容均不包含日常门、急诊和日常住院医疗担保及垫付。）</string>
    <string name="h_2_1">法律救援服务</string>
    <string name="h_2_2">日常法律咨询（2次）</string>
    <string name="h_2_3">为客户提供以下法律咨询服务：\n1、生活方面：婚姻、继承、交通、医疗事故、工伤等；\n2、工作方面：劳动纠纷、民间借贷纠纷；\n3、涉及刑事案件的罪名及程序了解。</string>
    <string name="h_2_4">个人法律文书、合同审核与风险提示（2次）\n（需额外收取费用的服务，会员享受7.8折优惠）</string>
    <string name="h_2_5">按照法律法规以及当事人的约定，对会员所签订或涉及的合同条款内容及版面，尤其关键条款、重要约定、责任免除条款、特殊约束等的合理性、合规性进行审核并告知风险，提示法律风险。</string>
    <string name="h_3_1">保险赔偿\n救援服务</string>
    <string name="h_3_2">保险理赔、伤残鉴定、赔偿方案协助（1次）</string>
    <string name="h_3_3">包括涉及以下情况：交通事故车损、人伤赔偿、财物损失，工伤保险；意外伤害保险、重大疾病、住院医疗、手术、住院津贴；旅游意外，猫狗咬伤，公共场所意外等</string>
    <string name="h_4_1">生活救援</string>
    <string name="h_4_2">就业协助  （2次）</string>
    <string name="d_content">配备专业医生和专业律师，在您遇到医疗问题、交通事故......</string>
    <string name="d_1_1">医疗救援服务内容（1次）</string>
    <string name="d_1_2">1、医疗救援电话\n2、呼叫中心协3助报案、通知家属\n3、院前医疗急救指导\n4、评估、推荐合适医院\n5、协助就医\n6、医疗互助金服务：\n7、治疗过程跟踪和评估</string>
    <string name="d_2_1">法律救援服务</string>
    <string name="d_2_2">日常法律咨询\n（服务件数：3次）</string>
    <string name="d_2_3">为客户提供以下法律咨询服务：\n1、生活方面：婚姻、继承、意外事故紧急处理、交通事故、医疗事故、工伤保险索赔等；\n2、工作方面：劳动纠纷、民间借贷纠纷、股权纠纷、公司管理制度等；\n3、合同审查与风险提示：旅游合同审查、移民协议审查、劳动合同审查、婚前协议指导、房屋买卖合同审查及风险提示；\n4、涉及刑事案件的罪名及程序了解。</string>
    <string name="d_2_4">个人法律文书、合同审核与风险提示（3次）\n（若需额外收取费用，持卡会员享受7.8折优惠）</string>
    <string name="d_2_5">按照法律法规以及当事人的约定对合同的内容及版面书写进行审核并提示法律风险。</string>
    <string name="d_2_6">出具律师函\n（服务件数：1份）</string>
    <string name="d_2_7">根据委托人的合理要求并基于法律事实及证据客观存在且法律事实不违反国家法律规章制度的情况下，而给予对方通知或在适当的范围之内发送专业的律师函，以便送达对象做出决定。</string>
    <string name="d_3_1">安邦交通人伤事故专属救援服务</string>
    <string name="d_3_2">专业技术人员</string>
    <string name="d_3_3">医生、律师、理赔师、伤残评估师、法医全程服务</string>
    <string name="d_3_4">医疗服务</string>
    <string name="d_3_5">提供伤情评估、医生沟通、治疗方案、医疗费用预判</string>
    <string name="d_3_6">交通定责</string>
</resources>