<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_activity_title"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="60dp">

        <LinearLayout
            android:id="@+id/asos111"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/chat_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="40dp"
                android:text="@string/online_medical_chat" />

            <ImageView
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:layout_marginLeft="80dp"
                android:background="@color/red"
                android:visibility="invisible" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:src="@mipmap/go_next" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/asos222"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/chat_2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="40dp"
                android:text="@string/online_law_chat" />

            <ImageView
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:layout_marginLeft="80dp"
                android:background="@color/red"
                android:visibility="invisible" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:src="@mipmap/go_next" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/asos333"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/chat_3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="40dp"
                android:text="@string/online_medical_rehabilitation_chat" />

            <ImageView
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:layout_marginLeft="80dp"
                android:background="@color/red"
                android:visibility="invisible" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:src="@mipmap/go_next" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/asos444"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/chat_4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="40dp"
                android:text="@string/online_damage_compensation_chat" />

            <ImageView
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:layout_marginLeft="80dp"
                android:background="@drawable/round_img"
                android:visibility="visible" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:src="@mipmap/go_next" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/hint_font_color" />

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>
</RelativeLayout>